[追加]部分テンプレート

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
             <ul class="navbar-nav ml-auto">
             <% if user_signed_in? %>
             <li>
-              <%= link_to " Home", users_path %>
+              <%= link_to " Home", root_path %>
             </li>
             <li>
               <%= link_to " Users", users_path %>
@@ -37,10 +37,10 @@
             </li>
             <% else %>
             <li>
-              <%= link_to " Home", users_path %>
+              <%= link_to " Home", root_path %>
             </li>
             <li>
-              <%= link_to " About", 'home/about' %>
+              <%= link_to " About", about_path %>
             </li>
             <li>
               <%= link_to " Sign up", new_user_registration_path %>
