--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,2 +1,33 @@
-<h1>Books#show</h1>
-<p>Find me in app/views/books/show.html.erb</p>
+<p id="notice"><%= notice %></p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-3">
+      <%= render 'sidemenu', user: @user, book: @book_new %>
+    </div>
+    <div class="col-md-8 offset-md-1">
+      <h2>Book detail</h2>
+      <table>
+        <tbody>
+            <tr>
+              <td>
+                <%= image_tag @user.get_profile_image(100,100) %><br>
+                <%= link_to @user.name, user_path(@user.id) %>
+              </td>
+              <td>
+                <%= link_to @book.title, books_path(@book.id) %>
+              </td>
+              <td>
+                <%= @book.body %>
+              </td>
+              <td>
+                <%= link_to 'Edit', edit_book_path(@book.id), class:'btn btn-sm btn-success' %>
+              </td>
+              <td>
+                <%= link_to 'Destroy', destroy_book_path(@book.id), class:'btn btn-sm btn-danger', method: :delete, "data-confirm" => "削除しますか？" %>
+              </td>
+            </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>  
+</div>
