--- a/app/views/books/_sidemenu.html.erb
+++ b/app/views/books/_sidemenu.html.erb
@@ -15,9 +15,9 @@
   </tbody>
 </table>
 <div>
-  <a class="btn btn-outline-secondary btn-block" href="edit_user">
+  <%= link_to edit_user_path(user.id), class:'btn btn-outline-secondary btn-block' do %>
     <i class="fas fa-user-cog"></i>
-  </a>
+  <% end %>
 </div>
 <h2>New book</h2>
 <%= form_with model: book do |f| %>
@@ -30,5 +30,5 @@
    <%= f.text_area :body %>
  </div>
  <%= f.submit 'Create Book', class:'btn btn-sm btn-success' %>
- <% end %>
+<% end %>
  
