--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,2 +1,31 @@
-<h1>Books#edit</h1>
-<p>Find me in app/views/books/edit.html.erb</p>
+<p id="notice"></p>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+          <h1>Editing Book</h1>
+          <div>
+             <% if @book.errors.any? %>
+               <h3><%= @book.errors.count %> error prohibited this obj from being saved:</h3>
+               <ul>
+                 <% @book.errors.full_messages.each do |message| %>
+                 <li><%= message %></li>
+                 <% end %>
+               </ul>
+             <% end %> 
+          </div>
+
+          <%= form_with model: @book, url: book_path(@book.id), method: :patch do |f| %>
+              <div>
+                 <div>Title</div>
+                 <%= f.text_field :title %> 
+              </div>
+              <div>
+                 <div>Opinion</div>
+                 <%= f.text_area :body %>
+              </div>
+              <p><%= f.submit 'Update Book', class:'btn btn-sm btn-success' %></p>
+              <%= link_to "Show", book_path(@book) %> | <%= link_to "Back", "/books" %>
+          <% end %>
+        </div>
+    </div>
+</div>
