--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,7 +1,15 @@
-<p id="notice"><%= notice %></p>
 <div class="container px-5 px-sm-0">
+  <% if @book.errors.any? %>
+    <h3><%= @book.errors.count %> error prohibited this obj from being saved:</h3>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  <% end %>
+
   <div class="row">
-    <div class="col-md-3" style="background-color: orange;">
+    <div class="col-md-3">
       <%= render 'sidemenu', user: @user, book: @book %>
     </div>
     <div class="col-md-8 offset-md-1">
@@ -19,11 +27,10 @@
         <% @books.each do |book| %>
             <tr>
               <td>
-                <%= link_to book_path(@user.id) %>
-                <%= image_tag @user.get_profile_image(100,100) %>
+                <%= link_to image_tag(@user.get_profile_image(80,80)), user_path(@user.id) %>
               </td>
               <td>
-                <%= book.title, "/books/#{book.id}" %>
+                <%= link_to book.title, book_path(book.id) %>
               </td>
               <td>
                 <%= book.body %>
