--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -6,28 +6,32 @@
     </div>
     <div class="col-md-8 offset-md-1">
       <h2>Book detail</h2>
-      <table>
-        <tbody>
-            <tr>
-              <td>
-                <%= image_tag @user.get_profile_image(100,100) %><br>
-                <%= link_to @user.name, user_path(@user.id) %>
-              </td>
-              <td>
-                <%= link_to @book.title, books_path(@book.id) %>
-              </td>
-              <td>
-                <%= @book.body %>
-              </td>
-              <td>
-                <%= link_to 'Edit', edit_book_path(@book.id), class:'btn btn-sm btn-success' %>
-              </td>
-              <td>
-                <%= link_to 'Destroy', destroy_book_path(@book.id), class:'btn btn-sm btn-danger', method: :delete, "data-confirm" => "削除しますか？" %>
-              </td>
-            </tr>
-        </tbody>
-      </table>
-    </div>
+        <table>
+          <tbody>
+              <tr>
+                <td>
+                  <%= image_tag @user.get_profile_image(100,100) %><br>
+                  <%= link_to @user.name, user_path(@user.id) %>
+                </td>
+                <td>
+                  <%= link_to @book.title, books_path(@book.id) %>
+                </td>
+                <td>
+                  <%= @book.body %>
+                </td>
+                <td>
+                  <% if @user == current_user %>
+                   <%= link_to 'Edit', edit_book_path(@book.id), class:'btn btn-sm btn-success' %>
+                  <% end %>
+                </td>
+                <td>
+                  <% if @user == current_user %>
+                   <%= link_to 'Destroy', book_path(@book), class:'btn btn-sm btn-danger', method: :delete, "data-confirm" => "削除しますか？" %>
+                  <% end %>
+                </td>
+              </tr>
+          </tbody>
+        </table>
+    </1div>
   </div>  
 </div>
