--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,2 +1,34 @@
-<h1>Users#edit</h1>
-<p>Find me in app/views/users/edit.html.erb</p>
+<p id="notice"></p>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+          <h2>User info</h2>
+          <div>
+             <% if @user.errors.any? %>
+               <h3><%= @user.errors.count %> error prohibited this obj from being saved:</h3>
+               <ul>
+                 <% @user.errors.full_messages.each do |message| %>
+                 <li><%= message %></li>
+                 <% end %>
+               </ul>
+             <% end %> 
+          </div>
+
+          <%= form_with model: @user, url: user_path(@user.id), method: :patch do |f| %>
+              <div>
+                 <div>Name</div>
+                 <%= f.text_field :name %> 
+              </div>
+              <div>
+                 <div>Image</div>
+                 <%= f.file_field :profile_image, accept: "image/*" %> 
+              </div>
+              <div>
+                 <div>Introduction</div>
+                 <%= f.text_area :introduction %>
+              </div>
+              <p><%= f.submit 'Update User', class:'btn btn-sm btn-secondary' %></p>
+          <% end %>
+        </div>
+    </div>
+</div>
