--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,33 +22,66 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
-            <% if user_signed_in? %>
               <li>
-                <%= link_to " Home", root_path %>
+                <nav class ="nav-link text-light">
+                  <a class="navbar-brand" href="/">
+                    <i class="fas fa-home"></i>
+                    Home
+                  </a>
+                </nav>
               </li>
-              <li>
-                <%= link_to " Users", users_path %>
-              </li>
-              <li>
-                <%= link_to " Books", books_path %>
-              </li>
-              <li>
-                <%= link_to " Log out", destroy_user_session_path, method: :delete %>
-              </li>
+              <% if user_signed_in? %>
+                <li>
+                  <nav class ="nav-link text-light">
+                    <a class="navbar-brand" href="/users">
+                      <i class="fas fa-users"></i>
+                      Users
+                    </a>
+                  </nav>
+                </li>
+                <li>
+                  <nav class ="nav-link text-light">
+                    <a class="navbar-brand" href="/books">
+                      <i class="fas fa-book-open"></i>
+                      Books
+                    </a>
+                  </nav>
+                </li>
+                <li>
+                  <%#= link_to " Log out", destroy_user_session_path, method: :delete %>
+                  <nav class ="nav-link text-light">
+                    <a class="navbar-brand" data-method="delete" href="/users/sign_out">
+                      <i class="fas fa-sign-out-alt"></i>
+                      Log out
+                    </a>
+                  </nav>
+                </li>
               <% else %>
-              <li>
-                <%= link_to " Home", root_path %>
-              </li>
-              <li>
-                <%= link_to " About", about_path %>
-              </li>
-              <li>
-                <%= link_to " Sign up", new_user_registration_path %>
-              </li>
-              <li>
-                <%= link_to " Log in", new_user_session_path %>
-              </li>       
-            <% end %>
+                <li>
+                  <nav class ="nav-link text-light">
+                    <a class="navbar-brand" href="/home/about">
+                      <i class="fas fa-link"></i>
+                      About
+                    </a>
+                  </nav>
+                </li>
+                <li>
+                  <nav class ="nav-link text-light">
+                    <a class="navbar-brand" href="/users/sign_up">
+                      <i class="fas fa-user-plus"></i>
+                      Sign up
+                    </a>
+                  </nav> 
+                </li>
+                <li>
+                  <nav class ="nav-link text-light">
+                    <a class="navbar-brand" href="/users/sign_in">
+                      <i class="fas fa-sign-in-alt"></i>
+                      Log in
+                    </a>
+                  </nav> 
+                </li>       
+              <% end %>
             </ul>
           </div>
         </div>
