--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,63 +22,73 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
-              <li>
-                <nav class ="nav-link text-light">
-                  <a class="navbar-brand" href="/">
-                    <i class="fas fa-home"></i>
-                    Home
-                  </a>
-                </nav>
-              </li>
               <% if user_signed_in? %>
                 <li>
                   <nav class ="nav-link text-light">
-                    <a class="navbar-brand" href="/users">
+                    <%= link_to user_path(current_user), class:'navbar-brand' do %>
+                      <i class="fas fa-home"></i>
+                      Home
+                    <% end %>
+                  </nav>
+                </li>
+              <% else %>
+                 <li>
+                  <nav class ="nav-link text-light">
+                    <%= link_to root_path, class:'navbar-brand' do %>
+                      <i class="fas fa-home"></i>
+                      Home
+                    <% end%>
+                  </nav>
+                </li>
+              <% end %>
+              <% if user_signed_in? %>
+                <li>
+                  <nav class ="nav-link text-light">
+                    <%= link_to users_path, class:'navbar-brand' do %>
                       <i class="fas fa-users"></i>
                       Users
-                    </a>
+                    <% end %>
                   </nav>
                 </li>
                 <li>
                   <nav class ="nav-link text-light">
-                    <a class="navbar-brand" href="/books">
+                    <%= link_to books_path, class:'navbar-brand' do %>
                       <i class="fas fa-book-open"></i>
                       Books
-                    </a>
+                    <% end %>
                   </nav>
                 </li>
                 <li>
-                  <%#= link_to " Log out", destroy_user_session_path, method: :delete %>
                   <nav class ="nav-link text-light">
-                    <a class="navbar-brand" data-method="delete" href="/users/sign_out">
+                    <%= link_to destroy_user_session_path, method: :delete, class:'navbar-brand' do %>
                       <i class="fas fa-sign-out-alt"></i>
                       Log out
-                    </a>
+                    <% end %>
                   </nav>
                 </li>
               <% else %>
                 <li>
                   <nav class ="nav-link text-light">
-                    <a class="navbar-brand" href="/home/about">
+                    <%= link_to about_path, class:'navbar-brand' do %>
                       <i class="fas fa-link"></i>
                       About
-                    </a>
+                    <% end %>
                   </nav>
                 </li>
                 <li>
                   <nav class ="nav-link text-light">
-                    <a class="navbar-brand" href="/users/sign_up">
+                    <%= link_to new_user_registration_path, class:'navbar-brand' do %>
                       <i class="fas fa-user-plus"></i>
                       Sign up
-                    </a>
+                    <% end %>
                   </nav> 
                 </li>
                 <li>
                   <nav class ="nav-link text-light">
-                    <a class="navbar-brand" href="/users/sign_in">
+                    <%=link_to new_user_session_path, class:'navbar-brand' do %>
                       <i class="fas fa-sign-in-alt"></i>
                       Log in
-                    </a>
+                    <% end %>
                   </nav> 
                 </li>       
               <% end %>
