--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -24,19 +24,21 @@
           </tr>
         </thead>
         <tbody>
-        <% @books.each do |book| %>
-            <tr>
-              <td>
-                <%= link_to image_tag(@user.get_profile_image(80,80)), user_path(@user.id) %>
-              </td>
-              <td>
-                <%= link_to book.title, book_path(book.id) %>
-              </td>
-              <td>
-                <%= book.body %>
-              </td>
-            </tr>
-        <% end %>
+         <% @books.each do |book| %>
+          <tr>
+            <td>
+             <%= link_to user_path(book.user) do %>
+               <%= image_tag book.user.get_profile_image(80,80) %>
+             <% end %>
+            </td>
+            <td>
+             <%= link_to book.title, book_path(book.id) %>
+            </td>
+            <td>
+             <%= book.body %>
+            </td>
+          </tr>
+         <% end %>
         </tbody>
       </table>
     </div>
