BOOKアイコンの記述を修正

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,5 @@
 <p id="notice"><%= notice %></p>
+<div class="container px-5 px-sm-0">
   <div class="row">
     <div class="col-md-3">
       <%= render 'books/sidemenu', user: @user, book: @book %>
@@ -32,3 +33,4 @@
       </table>
     </div>
   </div>
+</div>
