--- a/app/views/books/_sidemenu.html.erb
+++ b/app/views/books/_sidemenu.html.erb
@@ -1,34 +1,38 @@
 <h2>User info</h2>
 <%= image_tag user.get_profile_image(100,100) %>
-
 <table class="table">
-  <tbody>
-    <tr></tr>
-    <tr>
-      <th>name</th>
-      <th><%= user.name %></th>
-    </tr>
-    <tr>
-      <th>introduction</th>
-      <th><%= user.introduction %></th>
-    </tr>
-  </tbody>
+ <tbody>
+  <tr></tr>
+  <tr>
+    <th>name</th>
+    <th><%= user.name %></th>
+  </tr>
+  <tr>
+    <th>introduction</th>
+    <th><%= user.introduction %></th>
+  </tr>
+ </tbody>
 </table>
-<div>
+<div class="row">
   <%= link_to edit_user_path(user.id), class:'btn btn-outline-secondary btn-block' do %>
-    <i class="fas fa-user-cog"></i>
+   <i class="fas fa-user-cog"></i>
   <% end %>
 </div>
 <h2>New book</h2>
 <%= form_with model: book do |f| %>
- <div>
+  <div>
    <div>Title</div>
    <%= f.text_field :title %>
- </div>
- <div>
+  </div>
+  <div>
    <div>Opinion</div>
    <%= f.text_area :body %>
- </div>
- <%= f.submit 'Create Book', class:'btn btn-sm btn-success' %>
+  </div>
+  <%= f.submit 'Create Book', class:'btn btn-sm btn-success' %>
 <% end %>
- 
+
+  
+  
+  
+
+
