--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -14,7 +14,7 @@
                   <%= link_to @user.name, user_path(@user.id) %>
                 </td>
                 <td>
-                  <%= link_to @book.title, books_path(@book.id) %>
+                  <%= link_to @book.title, book_path(@book.id) %>
                 </td>
                 <td>
                   <%= @book.body %>
