--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,11 +1,11 @@
-<p id="notice"></p>
+<p id="notice"><%= notice %></p>
 <div class="container">
     <div class="row">
         <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
           <h1>Editing Book</h1>
           <div>
              <% if @book.errors.any? %>
-               <h3><%= @book.errors.count %> error prohibited this obj from being saved:</h3>
+               <h3><%= pluralize(@book.errors.count, "error") %> prohibited this obj from being saved:</h3>
                <ul>
                  <% @book.errors.full_messages.each do |message| %>
                  <li><%= message %></li>
